# cloverleaf_sycl

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  dev.sh  run.sh
InputDecks/: clover_bm16.in  clover_bm16_short.in
src/: CMakeLists.txt  KokkosCore_config.h  PdV.cpp  PdV.h  _main.cpp  _main.cpp.test  _main_nosycl.cpp  accelerate.cpp  accelerate.h  advec_cell.cpp  advec_cell.h  advec_mom.cpp  advec_mom.h  advection.cpp  advection.h  build_field.cpp  build_field.h  calc_dt.cpp  calc_dt.h  clover_leaf.cpp  comms.cpp  comms.h  cxx14_compat.hpp  definitions.h  field_summary.cpp  field_summary.h  flux_calc.cpp  flux_calc.h  generate_chunk.cpp  generate_chunk.h  hydro.cpp  hydro.h  ideal_gas.cpp  ideal_gas.h  initialise.cpp  initialise.h  initialise_chunk.cpp  initialise_chunk.h  pack_kernel.cpp  pack_kernel.h  (+27 more)
